Fixed search title overflowing when filter is activated

--- a/RC-SpeechToText/ClientApp/scss/file.scss
+++ b/RC-SpeechToText/ClientApp/scss/file.scss
@@ -125,7 +125,6 @@
 
 .search-title{
     font-size: 18px;
-    margin-top:15px;
     margin-left: 30px;
 }
 
